--- a/index.html
+++ b/index.html
@@ -109,51 +109,6 @@
                 <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium dolores dolore vitae maiores facilis eligendi!</p>
             </div>
             <div class="section-pictures">
-                <!--
-                <div class="picture">
-                    <div class="circle c100 p90 royalblue">
-                        <span>90%</span>
-                        <div class="slice">
-                            <div class="bar"></div>
-                            <div class="fill"></div>
-                        </div>
-                    </div>
-                    <h3 class="person-name">Web design</h3>
-                </div>
-
-                <div class="picture">
-                    <div class="circle c100 p75 pink">
-                        <span>75%</span>
-                        <div class="slice">
-                            <div class="bar"></div>
-                            <div class="fill"></div>
-                        </div>
-                    </div>
-                    <h3 class="person-name">HTML/CSS</h3>
-                </div>
-
-                <div class="picture">
-                    <div class="circle c100 p70 aqua">
-                        <span>70%</span>
-                        <div class="slice">
-                            <div class="bar"></div>
-                            <div class="fill"></div>
-                        </div>
-                    </div>
-                    <h3 class="person-name">Graphic design</h3>
-                </div>
-
-                <div class="picture">
-                    <div class="circle c100 p85 orange">
-                        <span>85%</span>
-                        <div class="slice">
-                            <div class="bar"></div>
-                            <div class="fill"></div>
-                        </div>
-                    </div>
-                    <h3 class="person-name">UI/UX</h3>
-                </div>
--->
                 <div class="picture">
                     <div class="radial-progress">
                         <div class="circle" id="web-design">
@@ -296,7 +251,7 @@
             </div>
 
             <div class="section-pictures">
-                <form action="">
+                <form action="POST">
                     <input type="text" placeholder="Your Name">
                     <input type="text" placeholder="Your Email">
                     <textarea placeholder="Your Message"></textarea>
